[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/GUI/Settings.gd" type="Script" id=1]
[ext_resource path="res://data/styles/GUI_bg.tres" type="StyleBox" id=2]
[ext_resource path="res://scenes/GUI/DialogWindowBaseASCII.tscn" type="PackedScene" id=3]
[ext_resource path="res://data/theme/header_ui_text.tres" type="Theme" id=4]
[ext_resource path="res://data/styles/settings_bg_light.tres" type="StyleBox" id=5]
[ext_resource path="res://data/styles/settings_bg_dark.tres" type="StyleBox" id=6]
[ext_resource path="res://scripts/GUI/InputConsumer.gd" type="Script" id=7]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModalBG" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.45551
margin_top = -2.13022
margin_right = -2.45557
margin_bottom = -2.13019
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="base" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -390.5
margin_top = -247.0
margin_right = 390.5
margin_bottom = 247.0
dialog_ok = true
title = "Settings"

[node name="ScrollContainer" type="ScrollContainer" parent="base"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 64.0
margin_right = -19.0
margin_bottom = -36.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="base/ScrollContainer"]
margin_right = 725.0
margin_bottom = 666.0
rect_min_size = Vector2( 725, 0 )
size_flags_vertical = 3

[node name="Label3" type="Label" parent="base/ScrollContainer/VBoxContainer"]
margin_right = 725.0
margin_bottom = 22.0
theme = ExtResource( 4 )
text = "Gameplay"

[node name="Language" type="Panel" parent="base/ScrollContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 725.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 5 )

[node name="Label" type="Label" parent="base/ScrollContainer/VBoxContainer/Language"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -0.814484
margin_bottom = -0.814484
text = "Language"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LangOption" type="OptionButton" parent="base/ScrollContainer/VBoxContainer/Language"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -256.0
margin_bottom = -3.8147e-06
text = "English"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enable Tutorial" type="Panel" parent="base/ScrollContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 725.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 6 )

[node name="Label" type="Label" parent="base/ScrollContainer/VBoxContainer/Enable Tutorial"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -0.814484
margin_bottom = -0.814484
text = "Tutorial"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutoCheck" type="CheckButton" parent="base/ScrollContainer/VBoxContainer/Enable Tutorial"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -100.487
margin_top = -37.2712
margin_right = -36.4868
margin_bottom = 12.7288
rect_scale = Vector2( 1.5, 1.5 )
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Difficulty" type="Panel" parent="base/ScrollContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 725.0
margin_bottom = 184.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 5 )

[node name="Label" type="Label" parent="base/ScrollContainer/VBoxContainer/Difficulty"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -0.814484
margin_bottom = -0.814484
text = "Difficulty"
valign = 1

[node name="DiffOptions" type="OptionButton" parent="base/ScrollContainer/VBoxContainer/Difficulty"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -256.0
margin_bottom = -3.8147e-06
text = "Normal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Panel" parent="base/ScrollContainer/VBoxContainer"]
margin_top = 188.0
margin_right = 725.0
margin_bottom = 238.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 6 )

[node name="Label" type="Label" parent="base/ScrollContainer/VBoxContainer/FPS"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -0.814484
margin_bottom = -0.814484
text = "Display FPS"
valign = 1

[node name="FPSCounter" type="CheckButton" parent="base/ScrollContainer/VBoxContainer/FPS"]
anchor_left = 1.009
anchor_top = 0.532
anchor_right = 1.009
anchor_bottom = 0.532
margin_left = -120.15
margin_top = -30.1842
margin_right = -44.1495
margin_bottom = 9.8158
rect_scale = Vector2( 1.5, 1.5 )
pressed = true

[node name="AutoFollow" type="Panel" parent="base/ScrollContainer/VBoxContainer"]
margin_top = 242.0
margin_right = 725.0
margin_bottom = 292.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 5 )

[node name="Label" type="Label" parent="base/ScrollContainer/VBoxContainer/AutoFollow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -7.0
margin_bottom = -7.0
text = "Camera Auto-Centering"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="base/ScrollContainer/VBoxContainer/AutoFollow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 15.0
margin_right = 10.0
margin_bottom = 15.0
custom_colors/font_color = Color( 0.690196, 0.690196, 0.690196, 1 )
text = "(double-tap to recenter)"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoFollowSwitch" type="CheckButton" parent="base/ScrollContainer/VBoxContainer/AutoFollow"]
anchor_left = 1.009
anchor_top = 0.532
anchor_right = 1.009
anchor_bottom = 0.532
margin_left = -120.15
margin_top = -30.1842
margin_right = -44.1495
margin_bottom = 9.8158
rect_scale = Vector2( 1.5, 1.5 )
pressed = true

[node name="spacer2" type="Label" parent="base/ScrollContainer/VBoxContainer"]
margin_top = 296.0
margin_right = 725.0
margin_bottom = 318.0

[node name="Label2" type="Label" parent="base/ScrollContainer/VBoxContainer"]
margin_top = 322.0
margin_right = 725.0
margin_bottom = 344.0
theme = ExtResource( 4 )
text = "Video"

[node name="FullScreen" type="Panel" parent="base/ScrollContainer/VBoxContainer"]
margin_top = 348.0
margin_right = 725.0
margin_bottom = 398.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 5 )

[node name="Label" type="Label" parent="base/ScrollContainer/VBoxContainer/FullScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -0.814484
margin_bottom = -0.814484
text = "Full Screen"
valign = 1

[node name="CheckButton" type="CheckButton" parent="base/ScrollContainer/VBoxContainer/FullScreen"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -110.799
margin_top = -28.1759
margin_right = -34.7986
margin_bottom = 11.8241
rect_scale = Vector2( 1.5, 1.5 )

[node name="VSync" type="Panel" parent="base/ScrollContainer/VBoxContainer"]
margin_top = 402.0
margin_right = 725.0
margin_bottom = 452.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 6 )

[node name="Label" type="Label" parent="base/ScrollContainer/VBoxContainer/VSync"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -0.814484
margin_bottom = -0.814484
text = "VSync"
valign = 1

[node name="CheckButton" type="CheckButton" parent="base/ScrollContainer/VBoxContainer/VSync"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -113.098
margin_top = -31.3776
margin_right = -37.0978
margin_bottom = 8.62243
rect_scale = Vector2( 1.5, 1.5 )

[node name="spacer" type="Label" parent="base/ScrollContainer/VBoxContainer"]
margin_top = 456.0
margin_right = 725.0
margin_bottom = 478.0

[node name="Label" type="Label" parent="base/ScrollContainer/VBoxContainer"]
margin_top = 482.0
margin_right = 725.0
margin_bottom = 504.0
theme = ExtResource( 4 )
text = "Sound"

[node name="MasterVolume" type="Panel" parent="base/ScrollContainer/VBoxContainer"]
margin_top = 508.0
margin_right = 725.0
margin_bottom = 558.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 5 )

[node name="Label" type="Label" parent="base/ScrollContainer/VBoxContainer/MasterVolume"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -0.814484
margin_bottom = -0.814484
text = "Master Volume"
valign = 1

[node name="MasterSlider" type="HSlider" parent="base/ScrollContainer/VBoxContainer/MasterVolume"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1.98633
margin_top = -29.7086
margin_right = 339.014
margin_bottom = 10.2914
rect_scale = Vector2( -1, 1.5 )
min_value = 1.0
max_value = 81.0
step = 0.1
value = 1.0
exp_edit = true
ticks_on_borders = true

[node name="SFXVolume" type="Panel" parent="base/ScrollContainer/VBoxContainer"]
margin_top = 562.0
margin_right = 725.0
margin_bottom = 612.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 6 )

[node name="Label" type="Label" parent="base/ScrollContainer/VBoxContainer/SFXVolume"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
text = "SFX Volume"
valign = 1

[node name="SFXSlider" type="HSlider" parent="base/ScrollContainer/VBoxContainer/SFXVolume"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1.89075
margin_top = -28.8235
margin_right = 339.109
margin_bottom = 11.1765
rect_scale = Vector2( -1, 1.5 )
min_value = 1.0
max_value = 81.0
step = 0.5
value = 1.0
exp_edit = true
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolume" type="Panel" parent="base/ScrollContainer/VBoxContainer"]
margin_top = 616.0
margin_right = 725.0
margin_bottom = 666.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 5 )

[node name="Label" type="Label" parent="base/ScrollContainer/VBoxContainer/MusicVolume"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -0.814484
margin_bottom = -0.814484
text = "Music Volume"
valign = 1

[node name="MusicSlider" type="HSlider" parent="base/ScrollContainer/VBoxContainer/MusicVolume"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1.2605
margin_top = -30.084
margin_right = 339.74
margin_bottom = 9.91601
rect_scale = Vector2( -1, 1.5 )
min_value = 1.0
max_value = 81.0
step = 0.5
value = 1.0
exp_edit = true
[connection signal="item_selected" from="base/ScrollContainer/VBoxContainer/Language/LangOption" to="." method="_on_LangOption_item_selected"]
[connection signal="toggled" from="base/ScrollContainer/VBoxContainer/Enable Tutorial/TutoCheck" to="." method="_on_TutoCheck_toggled"]
[connection signal="item_selected" from="base/ScrollContainer/VBoxContainer/Difficulty/DiffOptions" to="." method="_on_DiffOptions_item_selected"]
[connection signal="toggled" from="base/ScrollContainer/VBoxContainer/FPS/FPSCounter" to="." method="_on_FPSCounter_toggled"]
[connection signal="toggled" from="base/ScrollContainer/VBoxContainer/AutoFollow/AutoFollowSwitch" to="." method="_on_AutoFollowSwitch_toggled"]
[connection signal="toggled" from="base/ScrollContainer/VBoxContainer/FullScreen/CheckButton" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="base/ScrollContainer/VBoxContainer/VSync/CheckButton" to="." method="_on_vsync_toggled"]
